--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,9 @@ annotated-types==0.6.0
 anyio==3.7.1
 certifi==2023.7.22
 charset-normalizer==3.3.0
+coverage==6.5.0
+coveralls==3.3.1
+docopt==0.6.2
 exceptiongroup==1.1.3
 fastapi==0.103.2
 idna==3.4
