--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,21 +9,20 @@ jobs:
       matrix:
         python-version: [3.9, 3.10]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-
+      - name: update pip
+        run: python -m pip install --upgrade pip
       - name: Install dependencies
         run: |
           python -m pip install -r requirements.txt
-          python -m pip install --upgrade pip
-          python -m pip install -e '.[d]'
       - name: Run tests
         run: |
-          coverage run -m pytest flask_mpesa
+          coverage run -m pytest fastapi_mpesa
       - name: Upload coverage data to coveralls.io
         env:
           GITHUB_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
